--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DF9000000di6P" method="POST" onsubmit="beforesubmit()">
     
     <input type=hidden name="oid" value="00DF9000000di6P">
-    <input type=hidden name="retURL" value="">
+    <input type=hidden name="retURL" value="https://faiz1675.github.io/Web-To-Lead-Project/thanks.html">
     <input type=hidden name="Lead_Date__c" class="outputdate">
     
    
