--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Lead Date:<span class="dateInput dateOnlyInput"><input  id="00NF90000083hy3" name="00NF90000083hy3" size="12" type="text" /></span><br> -->
     <label for="date">Lead Date</label><input type="date" required="true" class="inputdate">
 
-    <div class="g-recaptcha" data-sitekey="6Lf-LsIpAAAAAGbnX13964zlsvU4Iv3xMJQvt8yo"></div><br>
+    <div data-callback="captchasuccess" class="g-recaptcha" data-sitekey="6Lf-LsIpAAAAAGbnX13964zlsvU4Iv3xMJQvt8yo"></div><br>
     
     <input type="submit" name="submit" class="submit">
     
