--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    
     <h1>Create Lead</h1>
-    <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DF9000000di6P" method="POST" onsubmit="beforesubmit()">
+    <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DF9000000di6P" method="POST" onsubmit="beforesubmit(event)">
     
     <input type=hidden name='captcha_settings' value='{"keyname":"WebToLeadProject","fallback":"true","orgId":"00DF9000000di6P","ts":""}'>
     <input type=hidden name="oid" value="00DF9000000di6P">
